bridge/base/mysql-db-deployment.yaml
#! mysql-db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql-db
    namespace: shop-api
    labels:
        com.docker.compose.project: shop-api
        com.docker.compose.service: mysql-db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: shop-api
            com.docker.compose.service: mysql-db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: shop-api
                com.docker.compose.service: mysql-db
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: shop-mysql
                  image: mysql:8.0
                  imagePullPolicy: IfNotPresent
                  args:
                    - --character-set-server=utf8mb4
                    - --collation-server=utf8mb4_unicode_ci
                  ports:
                    - name: mysql-db-3306
                      containerPort: 3306
                    - name: mysql-db-33060
                      containerPort: 33060
                  volumeMounts:
                    - name: var-lib-mysql
                      mountPath: /var/lib/mysql
            volumes:
                - name: var-lib-mysql
                  persistentVolumeClaim:
                    claimName: mysql-db-mysql-data
